# homework8

./: CMakeLists.txt  README.md  fileinfo.h  main.cpp
.github/workflows/: release.yml
